--- a/app/views/layouts/cards.html.erb
+++ b/app/views/layouts/cards.html.erb
@@ -21,7 +21,7 @@
         <ul id="tabs">
           <li id="nav-actual"><%= link_to 'noticias', posts_path %></li>
           <li id="nav-seleccion"><%= link_to 'selección', seleccion_path %></li>
-          <li id="nav-indice"><%= link_to 'proyectos', indice_path %></li>
+          <li id="nav-indice"><%= link_to 'procesos', projects_path %></li>
           <%= yield :tabs %>
           <li id="nav-panaderia" class="<%= 'selected' if @card.id == 1 %>">
           <%= link_to 'quiénes somos', lapanaderia_path %>
