Tags working again

--- a/app/views/admin/slide_images/index.html.erb
+++ b/app/views/admin/slide_images/index.html.erb
@@ -4,7 +4,7 @@
 <%=  render card %>
 <div class="actions">
   <%= link_to 'Subir foto', new_admin_card_slide_image_path(card) %>
-  <%= link_to 'Reordenar', reorder_admin_card_slide_images_path(card), method: :post %>
+  <%#= link_to 'Reordenar', reorder_admin_card_slide_images_path(card), method: :post %>
 </div>
 <table>
   <thead>
