--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
   <title><%= yield :title %> - Administración | Despachodepan</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <%= csrf_meta_tags %>
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
