Main image bug fixed

--- a/app/assets/stylesheets/application/cards.css.scss
+++ b/app/assets/stylesheets/application/cards.css.scss
@@ -137,7 +137,7 @@ body#cards {
     top: 10px;
     width: 290px;
     height: 240px;
-    text-align: justify;
+    text-align: left;
   }
 
   #main_image {
