SlideImage text alignment

--- a/app/views/admin/slide_images/_form.html.erb
+++ b/app/views/admin/slide_images/_form.html.erb
@@ -10,6 +10,7 @@
     <%= form.input :file, as: :file, label: 'Imágen' %>
     <%= form.input :body, as: :text, label: 'Texto' %>
     <%= form.input :timeline_position, as: :string, label: 'Cuadradito' %>
+    <%= form.input :text_align, collection: ['Izquierda', 'Centrado'], include_blank: false, label: 'Posición del texto' %>
     <%= form.submit 'Guardar' %>
 <% end %>
 
