--- a/app/views/admin/slide_images/index.html.erb
+++ b/app/views/admin/slide_images/index.html.erb
@@ -1,7 +1,6 @@
-
 <%= title "Fotos y vídeos de '#{card.title}'" %>
 
-<%=  render card %>
+<%= render card %>
 <div class="actions">
   <%= link_to 'Subir foto', new_admin_card_slide_image_path(card) %>
   <%#= link_to 'Reordenar', reorder_admin_card_slide_images_path(card), method: :post %>
@@ -20,27 +19,34 @@
   </thead>
   <tbody>
   <% slide_images.each do |image| %>
-  <tr>
-    <td><%= image_tag image.file_url(:thumb) if image.file %></td>
-    <td>
-      <%= image.position %>
-      <%= link_to '&uarr;'.html_safe, admin_position_path(move: :down, pan: image, url: request.url),
-                  method: :put %>
-      <%= link_to '&darr;'.html_safe, admin_position_path(move: :up, pan: image, url: request.url),
-                  method: :put %>
-    </td>
-    <td><%= render_body(image) %></td>
-    <td><%= image.text_align == 'Centrado' ? 'Centrado' : 'Izquierda' %></td>
-    <td><%= image.timeline_position %></td>
-    <td><%= 'Sí' if card.main_slide_id == image.id %></td>
-    <td class="actions">
-      <%= link_to 'Ver', [:admin, card, image] %>
-      <%= link_to 'Editar', [:edit, :admin, card, image] %>
-      <%= link_to 'Borrar', [:admin, card, image], class: 'delete', method: :delete,
-                  confirm: '¿Estás segura? No se puede deshacer' %>
+      <tr>
+        <td><%= image_tag image.file_url(:thumb) if image.file %></td>
+        <td>
+          <%= image.position %>
+          <%= link_to '&uarr;'.html_safe, admin_position_path(move: :down, pan: image, url: request.url),
+                      method: :put %>
+          <%= link_to '&darr;'.html_safe, admin_position_path(move: :up, pan: image, url: request.url),
+                      method: :put %>
+        </td>
+        <td><%= render_body(image) %></td>
+        <td><%= image.text_align == 'Centrado' ? 'Centrado' : 'Izquierda' %></td>
+        <td><%= image.timeline_position %></td>
+        <td class="actions">
+          <% if card.main_slide_id == image.id %>
+              Sí
+          <% else %>
+              <%= link_to 'Marcar como principal', mark_as_main_admin_card_slide_image_path(card, image),
+                          method: :put %>
+          <% end %>
+        </td>
+        <td class="actions">
+          <%= link_to 'Ver', [:admin, card, image] %>
+          <%= link_to 'Editar', [:edit, :admin, card, image] %>
+          <%= link_to 'Borrar', [:admin, card, image], class: 'delete', method: :delete,
+                      confirm: '¿Estás segura? No se puede deshacer' %>
 
-    </td>
-  </tr>
+        </td>
+      </tr>
   <% end %>
   </tbody>
 </table>
