--- a/app/views/layouts/cards.html.erb
+++ b/app/views/layouts/cards.html.erb
@@ -16,17 +16,7 @@
       <div id="playground">
         <a href="/lapanaderia" id="logo">La Panadería</a>
         <%= render 'layouts/social' %>
-        <a href="/lapanaderia" id="logo">La Panadería</a>
-        <%= render 'layouts/social' %>
-        <ul id="tabs">
-          <li id="nav-actual"><%= link_to 'noticias', posts_path %></li>
-          <li id="nav-seleccion"><%= link_to 'selección', seleccion_path %></li>
-          <li id="nav-indice"><%= link_to 'procesos', projects_path %></li>
-          <%= yield :tabs %>
-          <li id="nav-panaderia" class="<%= 'selected' if @card.id == 1 %>">
-          <%= link_to 'quiénes somos', lapanaderia_path %>
-          </li>
-        </ul>
+        <%= render 'layouts/tabs' %>
 
         <%= yield %>
       </div>
