--- a/app/views/pages/_selection.html.erb
+++ b/app/views/pages/_selection.html.erb
@@ -3,7 +3,7 @@
      color: <%= "##{selection.card.color.value}" %>;
      width: <%= selection.width %>px;">
   <div class="image">
-    <%= (link_to_if selection.card.visible?, image_tag(selection.file.url), selection.card.path) if selection.file.present? %>
+    <%= (link_to_if selection.card.visible?, image_tag(selection.file.url), selection.card.slug) if selection.file.present? %>
   </div>
   <div class="data">
     <div class="date"><%= year_of selection.date %></div>
