--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <% title 'proyectos' %>
 
-<div id="wrapper" data-scrollTime="<%= @scroll_time %>">
+<div id="wrapper" class="autoscroll" data-scrollTime="<%= @scroll_time %>">
   <div id="grid">
     <div id="content">
       <% @cards.each do |card| %>
