--- a/app/views/layouts/_tabs.html.erb
+++ b/app/views/layouts/_tabs.html.erb
@@ -1,6 +1,6 @@
 <ul id="tabs">
   <li id="nav-actual" class="<%= 'selected' if (current_page?(posts_path)|| current_page?(root_path)) %>"><%= link_to 'noticias', posts_path %></li>
-  <li id="nav-seleccion" class="<%= 'selected' if current_page?(seleccion_path) %>"><%= link_to 'selección', seleccion_path %></li>
+  <li id="nav-seleccion" class="<%= 'selected' if current_page?(seleccion_path) %>"><%= link_to 'qué hacemos', seleccion_path %></li>
   <li id="nav-indice" class="<%= 'selected' if (current_page?(projects_path)) %>"><%= link_to 'procesos', projects_path %></li>
   <%= yield :tabs %>
   <li id="nav-panaderia" class="<%= 'selected' if current_page?(card_path(1)) || current_page?(lapanaderia_path) %>">
