--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,6 +1,6 @@
 <% title('actual') %>
 
-<div id="wrapper">
+<div id="wrapper" class="autoscroll">
   <div id="time-panel" style="width: <%= @blog.width %>px;">
     <div class="line">
       <% if @blog.has_previous? %>
