Probando. Cache timestamp

--- a/app/views/layouts/cards.html.erb
+++ b/app/views/layouts/cards.html.erb
@@ -6,6 +6,7 @@
     <meta name="description" content="<%= yield :description %>">
     <meta name="author" content="La panadería s.l.c">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="timestamp" content="<%= Time.new.to_s %>">
     <title>l a p a n a d e r í a : <%= yield :title %></title>
     <%= stylesheet_link_tag "application" %>
     <%= csrf_meta_tags %>
