--- a/app/views/admin/selections/edit.html.erb
+++ b/app/views/admin/selections/edit.html.erb
@@ -1,2 +1,7 @@
 <%= title 'Editar selección' %>
+
+<div class="actions">
+    <%= link_to 'Cancelar', admin_selections_path %>
+</div>
+
 <%= render 'form' %>
