Clear cache when posts are updated

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -3,6 +3,7 @@
 
 <div class="actions">
   <%= link_to 'añadir noticia', new_admin_post_path %>
+  <%= link_to 'ver noticias', posts_path %>
 </div>
 
 <%= render 'index' %>
