--- a/app/views/admin/selections/index.html.erb
+++ b/app/views/admin/selections/index.html.erb
@@ -3,6 +3,7 @@
 
 <div class="actions">
   <%=  link_to 'Añadir a la selección', new_admin_selection_path %>
+  <%=  link_to 'Ver selección', seleccion_path %>
 </div>
 
 <table>
