Tratando de hacer funcionar los assets

--- a/app/assets/stylesheets/application/blog.css.scss
+++ b/app/assets/stylesheets/application/blog.css.scss
@@ -1,4 +1,4 @@
-@import 'application/variables.css.scss';
+@import 'variables.css.scss';
 
 #time-panel .news {
   float: left; height: 440px; margin-right: 10px;
