--- a/app/views/layouts/_ga.html.erb
+++ b/app/views/layouts/_ga.html.erb
@@ -18,3 +18,4 @@ fjs.parentNode.insertBefore(js, fjs);
     } catch(err) {
     }
 </script>
+<div class="display:none" id="app_version">1.1.0</div>
