--- a/app/views/layouts/_ga.html.erb
+++ b/app/views/layouts/_ga.html.erb
@@ -18,4 +18,4 @@ fjs.parentNode.insertBefore(js, fjs);
     } catch(err) {
     }
 </script>
-<div style="display:none" id="app_version">1.1.0</div>
+<div style="display:none" id="APP-VERSION">1.2.0 <%= ENV['RAILS_APP_VERSION'] %></div>
